--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <main>
     <section>
         <h1>Эффективные решения<br>для вашего бизнеса</h1>
-        <a href="">Заказать услугу</a>
+        <button type="button">Заказать услугу</button>
     </section>
     <section>
         <h2>Особенности</h2>
@@ -51,31 +51,31 @@
     <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
-            <li><img src="./img/img1.png" alt="" width="370"></li>
-            <li><img src="./img/img2.png" alt="" width="370"></li>
-            <li><img src="./img/img3.png" alt="" width="370"></li>
+            <li><img src="./img/img1.png" alt="" width="370" height="294"></li>
+            <li><img src="./img/img2.png" alt="" width="370" height="294"></li>
+            <li><img src="./img/img3.png" alt="" width="370" height="294"></li>
         </ul>
     </section>
     <section>
         <h2>Наша команда</h2>
         <ul>
             <li>
-              <img src="./img/img4.png" alt="Фото" width="270">
+              <img src="./img/img4.png" alt="Фото" width="270" height="260">
               <h3>Игорь Демьяненко</h3>
               <p>Product Designer</p>
             </li>
             <li>
-              <img src="./img/img5.png" alt="Фото" width="270">
+              <img src="./img/img5.png" alt="Фото" width="270" height="260">
               <h3>Ольга Репина</h3>
               <p>Frontend Developer</p>
             </li>
             <li>
-              <img src="./img/img6.png" alt="Фото" width="270">
+              <img src="./img/img6.png" alt="Фото" width="270" height="260">
               <h3>Николай Тарасов</h3>
               <p>Marketing</p>
             </li>
             <li>
-              <img src="./img/img7.png" alt="Фото" width="270">
+              <img src="./img/img7.png" alt="Фото" width="270" height="260">
               <h3>Михаил Ермаков</h3>
               <p>UI Designer</p>
             </li>
@@ -84,11 +84,8 @@
   </main>
   <footer>
     <a href="">WebStudio</a>
-    <address>г. Киев, пр-т Леси Украинки, 26</address>
-    <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-    </ul>
+    <address>г. Киев, пр-т Леси Украинки, 26<br><a href="mailto:info@devstudio.com">info@devstudio.com</a><br><a href="tel:+380961111111">+38 096 111 11 11</a>
+    </address>
   </footer>
 </body>
 </html>
